--- a/css/styles.css
+++ b/css/styles.css
@@ -78,11 +78,13 @@ ul {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.8vw
 }
 
 li{
-  width: 14vw;
-  height: 21vw;
+  width: 18.8vw;
+  height: 24vw;
   border: 1px solid #ccc;
   display: flex;
   flex-direction: column;
@@ -94,9 +96,11 @@ li{
 }
 
 li img{
-  width: 13vw;
-  height: 17vw;
+  width: 18vw;
+  height: 20vw;
   object-fit: cover;
+  margin-bottom: 0.3vw;
+  border-radius: 5px;
 }
 li p{
   margin-top: 0.2vw;
